--- a/todo-front/src/app/todos/todos.component.scss
+++ b/todo-front/src/app/todos/todos.component.scss
@@ -107,3 +107,6 @@
   background: linear-gradient(to right, rgb(2, 228, 171), rgb(74, 215, 240)) !important;
 }
 
+.error{
+  color: rgba(216, 106, 33, 0.89);
+}
