Welcome page added

--- a/todo-front/src/app/login/login.component.html
+++ b/todo-front/src/app/login/login.component.html
@@ -63,6 +63,7 @@
           value="Login"
           [disabled]="!signupForm.valid"
         />
+        <button class="btn btn-info" routerLink="/welcome">Cancel</button>
       </form>
     </div>
   </div>
