--- a/todo-front/src/app/register/register.component.html
+++ b/todo-front/src/app/register/register.component.html
@@ -100,6 +100,7 @@
           value="Sign me up"
           [disabled]="!signupForm.valid"
         />
+        <button class="btn btn-info" routerLink="/welcome">Cancel</button>
       </form>
     </div>
   </div>
