--- a/todo-front/src/app/todo-item/todo-item.component.scss
+++ b/todo-front/src/app/todo-item/todo-item.component.scss
@@ -89,7 +89,7 @@
     opacity: 1;
     .check {
       opacity: 1;
-      background-color: rgb(37, 197, 144);
+      background-color: #639aad;
     }
   }
 
