--- a/todo-front/src/app/todos/todos.component.scss
+++ b/todo-front/src/app/todos/todos.component.scss
@@ -1,7 +1,7 @@
 .section {
   width: 100%;
   height: 35%;
-  background: linear-gradient(to right, rgb(2, 228, 171), rgb(74, 215, 240));
+  background: linear-gradient(to right, #3c5f69, rgb(74, 215, 240));
 
   .mat-h1 {
     display: flex;
@@ -99,14 +99,14 @@
   width: 100%;
 }
 
-.my-pagination ::ng-deep .page-link{
+.my-pagination ::ng-deep .page-link {
   color: rgb(3, 34, 17) !important;
 }
 .my-pagination ::ng-deep .page-item.active .page-link {
   color: white !important;
-  background: linear-gradient(to right, rgb(2, 228, 171), rgb(74, 215, 240)) !important;
+  background: linear-gradient(to right, #3c5f69, rgb(74, 215, 240)) !important;
 }
 
-.error{
+.error {
   color: rgba(216, 106, 33, 0.89);
 }
