--- a/todo-front/src/app/login/login.component.scss
+++ b/todo-front/src/app/login/login.component.scss
@@ -9,7 +9,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to right, rgb(74, 215, 240), rgb(2, 228, 171));
+  background: linear-gradient(to right, #3c5f69, rgb(74, 215, 240));
 
   #login-box {
     width: 600px;
@@ -57,7 +57,8 @@ input[type="password"]:focus {
   transition: 0.2s ease;
 }
 
-input[type="submit"] {
+input[type="submit"],
+.btn-info {
   margin-top: 28px;
   width: 120px;
   height: 32px;
@@ -107,4 +108,10 @@ input[type="submit"]:active {
   &:hover {
     opacity: 1;
   }
+}
+
+.btn-info {
+  margin-top: -1px;
+  margin-left: 3px;
+  background-color: grey;
 }
