--- a/todo-front/src/app/register/register.component.scss
+++ b/todo-front/src/app/register/register.component.scss
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100%;
   // background-color: rgb(216, 241, 231);
-  background: linear-gradient(to right, rgb(2, 228, 171), rgb(74, 215, 240));
+  background: linear-gradient(to right, #3c5f69, rgb(74, 215, 240));
 
   #login-box {
     width: 600px;
@@ -58,7 +58,8 @@ input[type="password"]:focus {
   transition: 0.2s ease;
 }
 
-input[type="submit"] {
+input[type="submit"],
+.btn-info {
   margin-top: 28px;
   width: 120px;
   height: 32px;
@@ -109,4 +110,10 @@ input[type="submit"]:active {
   &:hover {
     opacity: 1;
   }
+}
+
+.btn-info {
+  margin-top: -1px;
+  margin-left: 3px;
+  background-color: grey;
 }
