--- a/todo-front/src/app/todo-dialog/todo-dialog.component.html
+++ b/todo-front/src/app/todo-dialog/todo-dialog.component.html
@@ -21,16 +21,17 @@
       </p>
     </div>
     <div class="button">
-      <button class="btn btn-info col-2" type="button" (click)="cancelDialog()">
-        Cancel
-      </button>
-      <button
-        class="btn btn-light save col-2"
-        type="submit"
-        [disabled]="form.invalid"
-      >
-        <mat-icon>save</mat-icon>Save
-      </button>
+      <div class="save col-3">
+        <button class="btn btn-light" type="submit" [disabled]="form.invalid">
+          <mat-icon>save</mat-icon>Save
+        </button>
+      </div>
+
+      <div class="cancel col-3">
+        <button class="btn btn-info" type="button" (click)="cancelDialog()">
+          Cancel
+        </button>
+      </div>
     </div>
   </div>
 </form>
