--- a/todo-front/src/app/todos/todos.component.scss
+++ b/todo-front/src/app/todos/todos.component.scss
@@ -1,12 +1,11 @@
 .section {
+  display: flex;
+  justify-content: center;
   width: 100%;
   height: 35%;
   background: linear-gradient(to right, #3c5f69, rgb(74, 215, 240));
 
   .mat-h1 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     color: white;
     font-weight: 900;
     font-size: 2.5em;
@@ -23,7 +22,7 @@
 }
 
 .container {
-  width: 700px;
+  max-width: 700px;
   border: 1px solid #eee;
   display: flex;
   flex-direction: row;
@@ -105,6 +104,7 @@
 .my-pagination ::ng-deep .page-item.active .page-link {
   color: white !important;
   background: linear-gradient(to right, #3c5f69, rgb(74, 215, 240)) !important;
+  border: none;
 }
 
 .error {
