--- a/todo-front/src/app/todos/todos.component.html
+++ b/todo-front/src/app/todos/todos.component.html
@@ -49,11 +49,16 @@
 </section>
 
 <div class="d-flex justify-content-center error" *ngIf="error">
-  <h1>{{error}}</h1>
+  <h1>{{ error }}</h1>
 </div>
 
-<div class="d-flex justify-content-center" style="padding: 1%;" *ngIf="pagination">
-  <pagination class="my-pagination"
+<div
+  class="d-flex justify-content-center"
+  style="padding: 1%"
+  *ngIf="pagination"
+>
+  <pagination
+    class="my-pagination"
     [boundaryLinks]="true"
     [totalItems]="pagination.totalItems"
     [itemsPerPage]="pagination.itemsPerPage"
@@ -61,7 +66,8 @@
     (pageChanged)="pagedChanged($event)"
     previousText="&lsaquo;"
     nextText="&rsaquo;"
-    firstText="&laquo;" 
-    lastText="&raquo;"> 
-</pagination>
+    firstText="&laquo;"
+    lastText="&raquo;"
+  >
+  </pagination>
 </div>
