Persist User with guards & interceptor added

--- a/todo-front/src/app/register/register.component.html
+++ b/todo-front/src/app/register/register.component.html
@@ -12,9 +12,29 @@
           <i class="glyphicon glyphicon-user"></i>
           <input
             type="text"
+            name="firstname"
+            placeholder="FirstName"
+            formControlName="firstName"
+          />
+        </div>
+
+        <div class="user-input">
+          <i class="glyphicon glyphicon-user"></i>
+          <input
+            type="text"
+            name="lastname"
+            placeholder="LastName"
+            formControlName="lastName"
+          />
+        </div>
+
+        <div class="user-input">
+          <i class="glyphicon glyphicon-user"></i>
+          <input
+            type="text"
             name="username"
-            placeholder="Username"
-            formControlName="username"
+            placeholder="UserName"
+            formControlName="userName"
           />
         </div>
         <p
