--- a/todo-front/src/app/register/register.component.scss
+++ b/todo-front/src/app/register/register.component.scss
@@ -14,10 +14,11 @@
 
   #login-box {
     width: 600px;
-    height: 480px;
+    height: 580px;
     background: #fff;
     border-radius: 2px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    border-radius: 2%;
 
     .form-center {
       box-sizing: border-box;
@@ -65,7 +66,7 @@ input[type="submit"],
   height: 32px;
   background: #16a085;
   border: none;
-  border-radius: 2px;
+  border-radius: 5%;
   color: #fff;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -116,6 +117,7 @@ input[type="submit"]:active {
   margin-top: -3px;
   margin-left: 3px;
   background-color: grey;
+  border-radius: 5%;
 }
 
 @media only screen and (max-width: 600px) {
