--- a/todo-front/src/app/todos/todos.component.scss
+++ b/todo-front/src/app/todos/todos.component.scss
@@ -1,17 +1,54 @@
 .section {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 35%;
-  background: linear-gradient(to right, #3c5f69, rgb(74, 215, 240));
+  .container-flex {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+    height: 35%;
+    background: linear-gradient(to right, #3c5f69, rgb(74, 215, 240));
+  }
 
   .mat-h1 {
-    color: white;
-    font-weight: 900;
-    font-size: 2.5em;
-    padding: 2.5em;
-    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-      "Lucida Sans", Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-left: 10%;
+
+    h1 {
+      color: white;
+      font-weight: bold;
+      font-size: 40px;
+      padding: 100px;
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
+    }
+  }
+
+  .dropdown {
+    display: flex;
+  }
+
+  .drop-button {
+    margin-right: 15px;
+    margin-top: 15px;
+    .btn-color {
+      background-color: #418ba1;
+    }
+  }
+  .dropdown.open.show {
+    height: 10%;
+  }
+
+  .dropdown-item {
+    padding-left: 6px;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  #dropdown-animated.dropdown-menu.show {
+    width: 91%;
+    min-width: 90%;
   }
 }
 
