--- a/todo-front/src/app/todos/todos.component.html
+++ b/todo-front/src/app/todos/todos.component.html
@@ -17,7 +17,7 @@
           class="btn btn-primary btn-color dropdown-toggle"
           aria-controls="dropdown-animated"
         >
-          Welcome {{ user.username }} <span class="caret"></span>
+          {{ user.username | titlecase }} <span class="caret"></span>
         </button>
       </div>
       <div class="drop-ul">
@@ -87,7 +87,7 @@
   </div>
 </section>
 
-<div class="d-flex justify-content-center error" *ngIf="error">
+<div class="d-flex-error justify-content-center error" *ngIf="error">
   <h1>{{ error }}</h1>
 </div>
 
