Admin page added

--- a/todo-front/src/app/not-found/not-found.component.html
+++ b/todo-front/src/app/not-found/not-found.component.html
@@ -15,7 +15,7 @@
           Sorry, an error has occured, Requested page not found!
         </div>
         <div class="error-actions">
-          <a routerLink="" class="btn btn-primary btn-lg"
+          <a routerLink="/home" class="btn btn-primary btn-lg"
             ><span class="glyphicon glyphicon-home"></span> Take Me Home </a
           ><a routerLink="#" class="btn btn-default btn-lg" disabled
             ><span class="glyphicon glyphicon-envelope"></span> Contact Support
